# League-Of-Legends-Auto-Accept-Range

./: .gitignore  README.md
docs/: ART_TODO.md  PRIVACY-PARTY.md  SKINS_PORT.md
native/: BUILD.md  Cargo.toml
native/modscan-core/src/: lib.rs
native/src-tauri/: Cargo.toml  tauri.conf.json
native/src-tauri/capabilities/: default.json  overlay.json
native/src-tauri/resources/: CREDITS.md
native/src-tauri/resources/announcer-studio/: template_events.bnk
native/src-tauri/resources/assets/: champ_alias.json
native/src-tauri/resources/pengu-loader/plugins/CHUD-ChromaWheel/: index.js
native/src-tauri/resources/pengu-loader/plugins/CHUD-CustomWheel/: index.js
native/src-tauri/resources/pengu-loader/plugins/CHUD-Declutter/: index.js
native/src-tauri/resources/pengu-loader/plugins/CHUD-FormsWheel/: index.js
native/src-tauri/resources/pengu-loader/plugins/CHUD-HistoricMode/: index.js
native/src-tauri/resources/pengu-loader/plugins/CHUD-Jade/: index.js_
native/src-tauri/resources/pengu-loader/plugins/CHUD-Jade/config/css/: plug-th.css
native/src-tauri/resources/pengu-loader/plugins/CHUD-Jade/config/js/addons/: AA.js  WinLose.js
native/src-tauri/resources/pengu-loader/plugins/CHUD-Jade/config/js/main/: observer.js
native/src-tauri/resources/pengu-loader/plugins/CHUD-Jade/config/js/plugins/: RegaliaBackground.js  RegaliaBanner.js  RegaliaBorder.js  RegaliaIcon.js  RegaliaTitle.js
native/src-tauri/resources/pengu-loader/plugins/CHUD-PartyMode/: index.js
native/src-tauri/resources/pengu-loader/plugins/CHUD-QueueArena/: index.js
native/src-tauri/resources/pengu-loader/plugins/CHUD-RandomSkin/: index.js
native/src-tauri/resources/pengu-loader/plugins/CHUD-SettingsPanel/: index.js
native/src-tauri/resources/pengu-loader/plugins/CHUD-SkinMonitor/: index.js
native/src-tauri/resources/pengu-loader/plugins/CHUD-UI/: index.js
native/src-tauri/src/: advisory.rs  auto_accept.rs  auto_range.rs  camera_assist.rs  config.rs  input.rs  lcu.rs  lcu_ws.rs  lib.rs  main.rs  net.rs  profile.rs  runes.rs  safety.rs  safety_manager.rs  stats.rs  telemetry.rs  vision.rs  winutil.rs
native/src-tauri/src/skins/: announcer_fix.rs  announcer_studio.rs  champ_alias.rs  datamove.rs  favorites.rs  lcu_ext.rs  mod.rs  mod_scope.rs  paths.rs  pengu.rs  phase.rs  skin_db.rs  slog.rs  state.rs  swiftplay.rs  ticker.rs  trigger.rs
native/src-tauri/src/skins/bridge/: broadcast.rs  handlers.rs  http.rs  mod.rs  protocol.rs  ws.rs
native/src-tauri/src/skins/downloads/: hashes.rs  mod.rs  repo.rs
native/src-tauri/src/skins/features/: chroma.rs  historic.rs  loadscreen_label.rs  mod.rs  random.rs  special.rs
native/src-tauri/src/skins/injection/: game_monitor.rs  injector.rs  mod.rs  overlay.rs  process.rs  storage.rs  target_detect.rs  tools.rs  zips.rs
native/src-tauri/src/skins/party/: manager.rs  mod.rs  presence.rs  relay.rs  sig.rs  token.rs
native/src-tauri/src/skins/test_fixtures/: champion_360_samira.json
native/ui/: index.html  overlay.html
native/ui/src/: library.js  main.js  modscan.js  overlay.js  profile.js  shared.js  studio.js
native/ui/styles/: library.css  modscan.css  neon.css  profile.css
relay-worker/: Cargo.toml  README.md  wrangler.toml
relay-worker/src/: lib.rs
runes-worker/: README.md  wrangler.toml
runes-worker/src/: index.js
skins-worker/: .gitignore  README.md  wrangler.toml
skins-worker/src/: index.js
tools/: retarget-announcer.py  scope-champion-mod.py
