[package]
name = "league-tools"
version = "1.2.0"
description = "Chud — native League of Legends toolkit"
authors = ["Joshua P Ivy"]
edition = "2021"
rust-version = "1.77"

# The library target Tauri uses; the binary just calls into it.
[lib]
name = "league_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# LCU client + Auto-Accept core (M1)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["time", "sync", "rt"] }
# LCU websocket event feed — instant ready-check accepts (native-tls = schannel,
# needed to accept the LCU's self-signed loopback cert)
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
native-tls = "0.2"
futures-util = "0.3"
sysinfo = "0.32"
base64 = "0.22"
directories = "5"
# Auto-Range injection (M2) — direct Win32 SendInput in input.rs
rdev = "0.5"                       # global key listener for chat-aware release
xcap = "0.9.6"
image = "0.25.6"
ndarray = "0.17.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
] }
