[package]
name = "league-tools"
version = "3.0.14"
description = "Chud — native League of Legends toolkit"
authors = ["ChudTonic"]
edition = "2021"
rust-version = "1.84"

# The library target Tauri uses; the binary just calls into it.
[lib]
name = "league_tools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# LCU client + Auto-Accept core (M1)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["time", "sync", "rt", "macros", "net"] } # "net" added S4 for bridge::mod's TcpListener
# LCU websocket event feed — instant ready-check accepts (native-tls = schannel,
# needed to accept the LCU's self-signed loopback cert)
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
native-tls = "0.2"
futures-util = "0.3"
sysinfo = "0.32"
base64 = "0.22"
directories = "5"
# Auto-Range injection (M2) — direct Win32 SendInput in input.rs
rdev = "0.5"                       # global key listener for chat-aware release
image = "0.25.6"                    # decode the bundled tray icon
# Skins subsystem (S1+) — injection pipeline, Pengu bridge, party mode.
zip = "2"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
flate2 = "1"
sha2 = "0.10"
# In-memory malware scan of downloaded Library mods before they touch disk (P1-ModScan).
modscan-core = { path = "../modscan-core" }
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] } # party-mode selection signing (P0-F)
regex = "1"
junction = "1"                     # NTFS junctions for the extract-cache (S3)
rfd = "0.15"                       # native open-file dialog for Import Mod (pick_mod_file)

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_Storage_FileSystem",
    "Win32_System_Registry",
    "Win32_Security",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation", # GetLocalTime for skins::slog timestamps
] }
